--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,26 +1,39 @@
-galaxy_info:
-  author: Jon Pugh
-  description: Makes an apache server accessible as an aegir remote.
-  company: OpenDevShop Inc
-  
-  license: GPLv2
-  
-  min_ansible_version: 1.2
-
-  galaxy_tags:
-    - aegir
-    - opendevshop
-    - hosting
-  
-  platforms:
-    - name: EL
-      versions:
-      - 7
-    - name: Ubuntu
-      versions:
-      - trusty
-      
 dependencies:
   - opendevshop.aegir-user
   - geerlingguy.git
-  - geerlingguy.apache
+  - gcoop-libre.apache
+
+galaxy_info:
+  author: gcoop-libre
+  description: Install and configure an Apache server to be accessible as an Aegir remote.
+  company: gcoop Cooperativa de Software Libre
+  license: GPLv2
+  min_ansible_version: 1.9
+  platforms:
+    - name: Debian
+      versions:
+        - all
+    - name: EL
+      versions:
+        - all
+    - name: opensuse
+      versions:
+        - all
+    - name: Solaris
+      versions:
+        - 11.3
+    - name: Ubuntu
+      versions:
+        - precise
+        - quantal
+        - raring
+        - saucy
+        - trusty
+        - utopic
+        - vivid
+        - wily
+        - xenial
+  galaxy_tags:
+    - aegir
+    - apache
+    - hosting
