Prefix role variables

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
+aegir_apache_sudoers_file: /etc/sudoers
+aegir_apache_user_in_web_group: True
 
-sudoers_file_path: /etc/sudoers
 aegir_user_home: /var/aegir
-aegir_user_in_web_group: 'yes'
