--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -1,4 +1,3 @@
 ---
-# vars file for aegir.apache on Debian
-apache_control: /usr/sbin/apache2ctl
-apache_user: www-data
+aegir_apache_control: /usr/sbin/apache2ctl
+aegir_apache_user: www-data
