--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,8 +1,7 @@
 ---
-
 - name: Install Apache2 PHP Mod.
   apt:
-    name: 'libapache2-mod-php5'
+    name: libapache2-mod-php5
     state: present
   notify:
     - restart webserver
