--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -1,8 +1,8 @@
 ---
-# Special configurations for RedHat Family.
-
 - name: Setup | REDHAT | Install SCL in CentOS
-  action: yum name=centos-release-scl state=present
+  yum:
+    name: centos-release-scl
+    state: present
   when: ansible_distribution == 'CentOS'
 
 - name: Setup | REDHAT | Install SCL in RHEL
