Add variable to enable the creation of custom Apache Virtual Host

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 aegir_apache_sudoers_file: /etc/sudoers
 aegir_apache_user_in_apache_group: True
+aegir_apache_extra_vhosts: []
 
 aegir_user_home: /var/aegir
